sonarqube-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: sonarqube
  name: sonarqube
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: sonarqube
    spec:
      containers:
        - name: sonarqube
          image: sonarqube:7.1
          #resources:
          #  requests:
          #    cpu: 100m
          #    memory: 324Mi
          #  limits:
          #    cpu: 2000m
          #    memory: 2048Mi
          #volumeMounts:
          #- mountPath: "/opt/sonarqube/data/"
          #  name: sonar-data
          #- mountPath: "/opt/sonarqube/extensions/"
          #  name: sonar-extensions
          ports:
          - containerPort: 9000
            protocol: TCP
      #volumes:
      #- name: sonar-data
      #  persistentVolumeClaim:
      #    claimName: sonar-data
      #- name: sonar-extensions
      #  persistentVolumeClaim:
      #    claimName: sonar-extensions
