sonarqube-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: sonar
  name: sonar
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 9000
      name: sonarqube
  selector:
    name: sonar
