ingress-test.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: basic-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "web-static-ip"
  spec:
    backend:
      serviceName: mysonar-sonarqube
      servicePort: 9000
